# agent-status

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_provider.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  plugin.rs  registry.rs  types.rs
crates/database/: Cargo.toml
crates/database/src/: db.rs  history.rs  lib.rs  schema.sql  settings.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: engine.rs  lib.rs
crates/plugins-common/: Cargo.toml
crates/plugins-common/src/: base.rs  detect.rs  lib.rs
crates/providers/antigravity/: Cargo.toml  README.md
crates/providers/antigravity/src/: lib.rs
crates/providers/claude/: Cargo.toml  README.md
crates/providers/claude/src/: lib.rs
crates/providers/codex/: Cargo.toml  README.md
crates/providers/codex/src/: lib.rs
crates/providers/copilot/: Cargo.toml  README.md
crates/providers/copilot/src/: lib.rs
crates/providers/cursor/: Cargo.toml  README.md
crates/providers/cursor/src/: lib.rs
crates/providers/custom/: Cargo.toml  README.md
crates/providers/custom/src/: lib.rs
crates/providers/gemini/: Cargo.toml  README.md
crates/providers/gemini/src/: lib.rs
crates/providers/ollama/: Cargo.toml  README.md
crates/providers/ollama/src/: lib.rs
crates/providers/openai/: Cargo.toml  README.md
crates/providers/openai/src/: lib.rs
crates/providers/openrouter/: Cargo.toml  README.md
crates/providers/openrouter/src/: lib.rs
crates/tray-label/: Cargo.toml
crates/tray-label/src/: label.rs  lib.rs
docs/: architecture.md  confidence.md  data-model.md  plugin-development.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: builtins.rs  commands.rs  history.rs  lib.rs  main.rs  notification_bridge.rs  scheduler.rs  state.rs  view_model.rs
ui/: index.html  popover.css  popover.js
