[package]
name = "provider-claude"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
agent-plugins.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
