[package]
name = "provider-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
agent-plugins.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
